<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="drawer_menu_array">
        <item>Z:name</item>
        <item>Profile</item>
        <item>Groups</item>
        <item>Create Group</item>
        <item>Manage Groups</item>
        <item>Subscribed Groups</item>
        <item>App Settings</item>
        <item>Invite Friends</item>
        <item>Feedback</item>
    </string-array>
    <string-array name="drawer_menu_detail_array">
        <item>Z:name</item>
        <item>View Profile</item>
        <item>Groups info</item>
        <item>Create Group</item>
        <item>Manage Groups</item>
        <item>Subscribed Groups</item>
        <item>Notifcation, account, and other settings</item>
        <item>Invite your friends with whatsapp or facebook</item>
        <item>We want to hear it all</item>
    </string-array>
    <string-array name="actionbar_list_array">
        <item>All</item>
        <item>Friends</item>
        <item>Recent</item>
        <item>Popular</item>
    </string-array>
    <!-- Application ID's -->
    <string name="facebook_app_id">710976325617436</string>

    <!-- Intro view -->
    <string name="Page1Title">Tell Us</string>
    <string name="Page2Title">Place</string>
    <string name="Page3Title">Share</string>
    <string name="Page4Title">Available</string>
    <string name="Page5Title">Feed</string>
    <string name="Page6Title">Cloud-Based</string>
    <string name="Page7Title">Private</string>
    <string name="Page1Message"><![CDATA[<b>Subscribe</b>]]> to groups &amp; share anonymously with your friends<![CDATA[<br/>]]> &amp; app acquaintances.</string>
    <string name="Page2Message"><![CDATA[<b>Changed</b>]]>  ur city or ur service provider? Don’t worry with Z:name<![CDATA[<br/>]]>u don’t need to communicate ur new number anymore</string>
    <string name="Page3Message"><![CDATA[<b>Be known</b>]]> by ur Z:name &amp; share ur Z:name<![CDATA[<br/>]]> instead of ur Mobile number</string>
    <string name="Page4Message"><![CDATA[<b>Want</b>]]> to know if your friend is free to talk?<![CDATA[<br/>]]> check his calling status on Z:name</string>
    <string name="Page5Message"><![CDATA[<b>Check</b>]]> activity feeds of ur friends &amp; do much more.<![CDATA[<br/>]]>Hop in to check out more...!</string>
    <string name="Page6Message"><![CDATA[<b>Classes</b>]]> lets you access your messages<![CDATA[<br/>]]>from multiple devices</string>
    <string name="Page7Message"><![CDATA[<b>Classes</b>]]> messages are heavily encrypted<![CDATA[<br/>]]>and can self-destruct</string>
    <string name="about_us"><![CDATA[<b>Subscribe</b>]]> to groups &amp; share anonymously with your friends<![CDATA[<br/>]]> &amp; app acquaintances.</string>
    <string name="str_actionbar_fragment_feed_all">All</string>
    <string name="str_actionbar_fragment_feed_friends">Friends</string>
    <string name="str_actionbar_fragment_feed_recent">Recent</string>
    <string name="str_actionbar_fragment_feed_popular">Popular</string>
    <string name="str_actionbar_fragment_group_feed_all">All</string>
    <string name="str_actionbar_fragment_group_feed_report">Report</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="app_name">TellUs</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="noconnection">Please check your internet connection</string>
    <string name="strsubscribe">Subscribed</string>
    <string name="strunsubscribe">Unsubscribed</string>
    <string name="action_status">Status</string>
    <string name="action_notification">Notification</string>
    <string name="action_create_group">Create Group</string>
    <string name="action_subscribe">Subscribe</string>
    <string name="action_unsubscribe">Unsubscribe</string>
    <string name="action_group_post">Post</string>
    <string name="action_search">Search</string>
    <string name="action_update">Profile Update</string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_title">Write us a feedback about tellus</string>
    <string name="setting_notification_title">Push Notification</string>
    <string name="setting_notification_summary">You will be notified on activity</string>
    <string name="setting_contact_sync_title">Contact Sync</string>
    <string name="setting_contact_sync_summary">Sync your contact book</string>
    <string name="setting_contact_sync">Sync</string>
    <string name="invite_whatsapp_title">Share with Whatsapp Contact</string>
    <string name="invite_share_text">Tell us | Post anything anonymously</string>
    <string name="error_api">Sorry for inconvience</string>
    <string name="error_no_data">No data found</string>
    <string name="activity_manage_groups">Manage Groups</string>
    <string name="activity_subscribed_groups">Subscribed Groups</string>
    <string name="activity_notification">Notification</string>
    <string name="activity_groups">Groups</string>
    <string name="activity_create_group">Create Group</string>
    <string name="activity_sign_in">Log In</string>
    <string name="activity_sign_up">Sign Up</string>
    <string name="activity_verification">SMS Verify</string>
    <string name="str_sign_verify">Verification code will be sent to associated number with these username</string>

    <!-- SWITCH -->
    <string name="textOn">ON</string>
    <string name="textOff">OFF</string>

</resources>